refactor: 가독성 향상을 위한 코드 개선 (#21)